Use local repo for local jar instead of system scope